--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-xs-6 col-md-4 sections">
             <h3>Recruitment Services</h3>
             <h6>Quality professionals</h6>
-            <img src="assets/images/synratech/banner1.jpg" alt="baneer2" class="img-thumbnail img-responsive"\>
+<!--             <img src="assets/images/synratech/banner1.jpg" alt="baneer2" class="img-thumbnail img-responsive"\> -->
             <p>SynraTech Solutions experienced staffing professionals have the skills to Search, Screen and Select professionals for your bussiness needs.
               SynraTech offers following Recruitment & Staffing Services: - Temporary Staffing</p>
               <a href="services.html" class="button">Read More</a>
@@ -72,7 +72,7 @@
           <div class="col-xs-6 col-md-4 sections">
             <h3>Outsourcing Services</h3>
             <h6>Significantly reduce cost</h6>
-            <img src="assets/images/synratech/banner3.jpg" alt="baneer2" class="img-thumbnail img-responsive"\>
+<!--             <img src="assets/images/synratech/banner3.jpg" alt="baneer2" class="img-thumbnail img-responsive"\> -->
             <p>SynraTech Solutions has dedicated staffing with deep experince in proven methodologies and disciplined
                processes to deliver the Outsourcing Services: - Recruiting & Staffing - Development & Testing - Infrastructure Management</p>
                <a href="services.html" class="button">Read More</a>
@@ -82,7 +82,7 @@
           <div class="col-xs-6 col-md-4">
             <h3>Consulting Services</h3>
             <h6>Meet your bussiness needs</h6>
-            <img src="assets/images/synratech/banner5.jpg" alt="baneer2" class="img-thumbnail img-responsive"\>
+<!--             <img src="assets/images/synratech/banner5.jpg" alt="baneer2" class="img-thumbnail img-responsive"\> -->
             <p>SynraTech Solutions provides project leadership and IT consulting services that help your company to realize their business goals.
                - Project Management Service - Financial management - Content managemen</p>
                <a href="services.html" class="button">Read More</a>
