--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
         <h3>SERVICES</h3>
         <h6>We are here to help you.</h6>
      <!-- <div class="col-sm-4 col-md-4"> -->
-        <img src="assets/images/synratech/services.jpg" alt="baneer2" class="img-thumbnail pull-left img-responsive about"\>
+<!--         <img src="assets/images/synratech/services.jpg" alt="baneer2" class="img-thumbnail pull-left img-responsive about"\> -->
         <!-- </div> -->
         <div class="aboutCompany">
           <p>Our certified expertise and comprehensive IT outsourcing, technology consulting, and IT services Help broaden your IT capabilities, to handle any aspect of your technology needs. We know the world is changing rapidly - from the consumerization of IT to the convergence of physical and IT security - and that's why we choose to focus on areas that best address for our client's business needs
