--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       <div class="col-xs-12 col-sm-6 col-md-8">
         <h3>CONTACT US</h3>
         <h6>Speak with our recruiter today</h6>
-        <img src="assets/images/synratech/banner3.jpg" alt="baneer2" class="img-thumbnail img-responsive services"\>
+<!--         <img src="assets/images/synratech/banner3.jpg" alt="baneer2" class="img-thumbnail img-responsive services"\> -->
         <p>For more information on how we can help your business succeed, contact us at <a href="mailto:info@synratech.com">info@synratech.com</a></p>
       </div>
 
