--- a/careers.html
+++ b/careers.html
@@ -48,7 +48,7 @@
         <h3>CAREERS</h3>
         <h6>Performance at your fingertips</h6>
      <!-- <div class="col-sm-4 col-md-4"> -->
-        <img src="assets/images/career_background.jpg" alt="baneer2" class="img-thumbnail pull-left img-responsive about"\>
+<!--         <img src="assets/images/career_background.jpg" alt="baneer2" class="img-thumbnail pull-left img-responsive about"\> -->
         <!-- </div> -->
         <div class="aboutCompany">
           <p>SynraTech Solutions interested in hiring certified professionals that are the best in the industry, with deep-seeded technical knowledge and experience. And, we insist that those professionals are good with people, and can promote trust and build solid relationships with our customers.</p>
