--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <h3>COMPANY PROFILE</h3>
             <h6>Performance at your fingertips</h6>
          <!-- <div class="col-sm-4 col-md-4"> -->
-            <img src="assets/images/synratech/banner1.jpg" alt="baneer2" class="img-thumbnail pull-left img-responsive about"\>
+<!--             <img src="assets/images/synratech/banner1.jpg" alt="baneer2" class="img-thumbnail pull-left img-responsive about"\> -->
             <!-- </div> -->
             <div class="aboutCompany">
             <p>SynraTech Solutions LLC is a privately owned Company based in Bellevue, Washionton, USA.</p>
